--- a/kubernetes/deploy.yml
+++ b/kubernetes/deploy.yml
@@ -6,8 +6,21 @@ metadata:
   name: go-webapp
 spec:
   containers:
-  - image: muuzii/go-webapp:11
-    imagePullPolicy: IfNotPresent
-    name: go-webapp
+    - image: muuzii/go-webapp:11
+      imagePullPolicy: IfNotPresent
+      name: go-webapp
   dnsPolicy: ClusterFirst
   restartPolicy: Never
+---
+apiVersion: v1
+kind: service
+metadata:
+  name: go-webapp
+spec:
+  selector:
+    run: go-webapp
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+  type: LoadBalancer
